// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StandardModal /> should match snapshot with title and body 1`] = `
<body>
  <div />
  <div
    class="modalPortal modalPortalIsOpen"
  >
    <div
      class="modalPanel"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="modalContent"
        role="dialog"
      >
        <article
          class="modal modalSizeStandard"
        >
          <header
            class="header headerWithBorder"
          >
            <button
              aria-label="close"
              class="headerCloseButton"
            >
              <i
                class="root"
                style="width: 20px; height: 20px;"
              >
                <svg
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M287.147 256l118.186 118.187v31.146h-31.146L256 287.147 137.813 405.333h-31.146v-31.146L224.853 256 106.667 137.813v-31.146h31.146L256 224.853l118.187-118.186h31.146v31.146L287.147 256z"
                  />
                </svg>
              </i>
            </button>
            <div
              class="headerTitle"
            >
              <h4
                class="root sizeScale3"
              >
                Hello World!
              </h4>
            </div>
          </header>
          <main
            class="content"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
            </p>
          </main>
        </article>
      </div>
    </div>
  </div>
</body>
`;

exports[`<StandardModal /> should match snapshot without title and body 1`] = `
<body>
  <div />
  <div
    class="modalPortal modalPortalIsOpen"
  >
    <div
      class="modalPanel"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="modalContent"
        role="dialog"
      >
        <article
          class="modal modalSizeStandard"
        >
          <header
            class="header headerWithBorder"
          >
            <button
              aria-label="close"
              class="headerCloseButton"
            >
              <i
                class="root"
                style="width: 20px; height: 20px;"
              >
                <svg
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M287.147 256l118.186 118.187v31.146h-31.146L256 287.147 137.813 405.333h-31.146v-31.146L224.853 256 106.667 137.813v-31.146h31.146L256 224.853l118.187-118.186h31.146v31.146L287.147 256z"
                  />
                </svg>
              </i>
            </button>
            <div
              class="headerTitle"
            >
              <h4
                class="root sizeScale3"
              />
            </div>
          </header>
          <main
            class="content"
          />
        </article>
      </div>
    </div>
  </div>
</body>
`;
